--- a/shell/Vagrantfile
+++ b/shell/Vagrantfile
@@ -1,16 +1,36 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+librarian_name = 'librarian'
+librarian_version = '0.0.23'
+begin
+  Gem::Specification.find_by_name(librarian_name, librarian_version)
+rescue Gem::LoadError
+  begin
+    require 'vagrant/environment'
+    env = Vagrant::Environment.new
+    env.cli('gem', 'install', librarian_name, '--version', librarian_version)
+  rescue SystemExit
+  end
+end
+
 Vagrant::Config.run do |config|
+
+#require 'librarian/chef/cli'
+#cli = Librarian::Chef::Cli.new
+#cli.init
+#puts "inited..."
+
+
   config.vm.box = "buildgap-shell"
   config.vm.box_url = "http://files.vagrantup.com/precise64.box"
 
   config.vm.provision :chef_solo do |chef|
     chef.log_level = :debug
 
-    chef.cookbooks_path = "../development/chef-repo/cookbooks"
+    chef.cookbooks_path = "machines/buildgap-shell/cookbooks"
 
-    chef.add_recipe "buildgap-shell::git"
+#    chef.add_recipe "buildgap-shell::git"
 
     chef.add_recipe "build-essential"
 
@@ -19,24 +39,24 @@ Vagrant::Config.run do |config|
     chef.add_recipe "python::source"
     chef.add_recipe "python::pip"
     chef.add_recipe "python::virtualenv"
-    chef.add_recipe "buildgap-shell::python"
+#    chef.add_recipe "buildgap-shell::python"
 
     # package.json
     # npm install -d
-    chef.add_recipe "node"
+#    chef.add_recipe "node"
 
     # todo version info for ruby_build in attributes
-    chef.add_recipe "rbenv::system_install"
-    chef.add_recipe "rbenv::ohai_plugin"
-    chef.add_recipe "buildgap-shell::ruby"
+#    chef.add_recipe "rbenv::system_install"
+#    chef.add_recipe "rbenv::ohai_plugin"
+#    chef.add_recipe "buildgap-shell::ruby"
 
-    chef.add_recipe "java"
+#    chef.add_recipe "java"
 
-    chef.add_recipe "gradle::tarball"
+#    chef.add_recipe "gradle::tarball"
 
     # http://www.dagolden.com/index.php/1528/five-ways-to-install-modules-prereqs-by-hand/
-    chef.add_recipe "perlbrew"
-    chef.add_recipe "buildgap-shell::perl"
+#    chef.add_recipe "perlbrew"
+#    chef.add_recipe "buildgap-shell::perl"
 
     chef.json = {
     	"python" => {
